--- a/stat/index.html
+++ b/stat/index.html
@@ -6,7 +6,6 @@
         <title>title</title> 
         <script src="node_modules/react/dist/react.js"></script>
         <script src="node_modules/react/dist/JSXTransformer.js"></script> 
-        <link href="css/rickshaw.min.css" rel="stylesheet"></link>
         <style>
             #graph-container { 
                 float: left; 
@@ -33,16 +32,19 @@
               stroke-width: 2px;
             }
             .rx.area {
-                fill: rgba(220, 20, 60, 0.14);            
+                fill: #FADEE3;
             }
             .rx.line {
               stroke:brown;
             }
             .tx.area {
-              fill: rgba(100, 149, 237, 0.14);
+              fill: #E9F0FC;
             }
             .tx.line {
               stroke:darkblue;
+            }
+            .mean.line {
+              stroke: #E9E9E9;
             }
         </style>
     </head>
