--- a/stat/index.html
+++ b/stat/index.html
@@ -7,7 +7,7 @@
         <script src="node_modules/react/dist/react.js"></script>
         <script src="node_modules/react/dist/JSXTransformer.js"></script> 
         <style>
-            #graph-container { 
+            #graph { 
                 float: left; 
             } 
             #y-axis { 
@@ -18,7 +18,7 @@
               font: 14px/1.4 Helvetica,arial,nimbussansl,liberationsans,freesans,clean,sans-serif,"Segoe UI Emoji","Segoe UI Symbol";            
             }
             #controls {
-                width: 100px;
+                width: 10px;
                 float: left;
             }
             .axis path,
